# fft-spectrum-visualizer

./: .gitignore  CMakeLists.txt  README.md  gen_signal.py  signal_1.txt
include/: _kiss_fft_guts.h  fft_processor.h  graphics.h  kiss_fft.h
src/: fft_processor.c  graphics.c  kiss_fft.c  main.c
